add grid images

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,8 @@ dependencies {
 
     //glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
+
+    //recycler
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
 }
